--- a/index.html
+++ b/index.html
@@ -3,60 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="wce-wtial-scale=1.0">
     
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+  <div class="main">
+    <h1>Memory game</h1>
     <div class="scene scene--card">
         <div class="card">
-          <img class="card__face card__face--front" src="front.jpg" ></img>
-          <img class="card__face card__face--back" id="cat" src="cat.jpg"></img>
+          <img class="card__face card__face--front" src="front.jpg" >
+          <img class="card__face card__face--back" src="cat.jpg">
         </div>
       </div>
       <div class="scene scene--card">
         <div class="card">
-          <img class="card__face card__face--front" src="front.jpg" ></img>
-          <img class="card__face card__face--back" id="monkey" src="monkey.jpg"></img>
+          <img class="card__face card__face--front" src="front.jpg" >
+          <img class="card__face card__face--back"  src="monkey.jpg">
         </div>
       </div>
       <div class="scene scene--card">
         <div class="card">
-          <img class="card__face card__face--front" src="front.jpg" ></img>
-          <img class="card__face card__face--back" id="dog" src="dog.jpg"></img>
+          <img class="card__face card__face--front" src="front.jpg" >
+          <img class="card__face card__face--back" src="dog.jpg">
         </div>
       </div>
       <div class="scene scene--card">
         <div class="card">
-          <img class="card__face card__face--front" src="front.jpg" ></img>
-          <img class="card__face card__face--back" id="cat" src="cat.jpg"></img>
+          <img class="card__face card__face--front" src="front.jpg" >
+          <img class="card__face card__face--back" src="cat.jpg">
         </div>
       </div>
       <div class="scene scene--card">
         <div class="card">
-          <img class="card__face card__face--front" src="front.jpg" ></img>
-          <img class="card__face card__face--back" id="horse" src="horse.jpg"></img>
+          <img class="card__face card__face--front" src="front.jpg" >
+          <img class="card__face card__face--back"  src="horse.jpg">
         </div>
       </div>
       <div class="scene scene--card">
         <div class="card">
-          <img class="card__face card__face--front" src="front.jpg" ></img>
-          <img class="card__face card__face--back" id="monkey" src="monkey.jpg"></img>
+          <img class="card__face card__face--front" src="front.jpg" >
+          <img class="card__face card__face--back"  src="monkey.jpg">
         </div>
       </div>
       <div class="scene scene--card">
         <div class="card">
-          <img class="card__face card__face--front" src="front.jpg" ></img>
-          <img class="card__face card__face--back" id="horse" src="horse.jpg"></img>
+          <img class="card__face card__face--front" src="front.jpg" >
+          <img class="card__face card__face--back"  src="horse.jpg">
         </div>
       </div>
       <div class="scene scene--card">
         <div class="card">
-          <img class="card__face card__face--front" src="front.jpg" ></img>
-          <img class="card__face card__face--back" id="dog" src="dog.jpg"></img>
+          <img class="card__face card__face--front" src="front.jpg" >
+          <img class="card__face card__face--back" src="dog.jpg">
         </div>
       </div>
+    </div>
       <p>Click card to flip.</p>
       <script src="script.js" type="text/javascript"></script>
 </body>
